[gd_scene load_steps=13 format=3 uid="uid://k3e86wyibwv8"]

[ext_resource type="Script" path="res://entities/player.gd" id="1_uppic"]
[ext_resource type="SpriteFrames" uid="uid://c2vx75vuqrqi0" path="res://resources/basic_anims.tres" id="2_wr3fr"]
[ext_resource type="Script" path="res://scripts/State Machine.gd" id="3_73eq6"]
[ext_resource type="Script" path="res://scripts/player states/PlayerOnGround.gd" id="4_53up4"]
[ext_resource type="Script" path="res://scripts/player states/PlayerInAir.gd" id="5_enbi2"]
[ext_resource type="Script" path="res://scripts/player states/PlayerFire.gd" id="6_er8oo"]
[ext_resource type="Script" path="res://scripts/player states/PlayerDead.gd" id="7_haxam"]
[ext_resource type="Script" path="res://scripts/player states/PlayerDash.gd" id="8_pi7k4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l4650"]
size = Vector2(16, 28)

[sub_resource type="Curve" id="Curve_4jcma"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.985849, 0.0210526), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_3376c"]
curve = SubResource("Curve_4jcma")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_10tpu"]
emission_shape = 3
emission_box_extents = Vector3(7, 4, 1)
particle_flag_disable_z = true
direction = Vector3(0, 1, 0)
spread = 20.0
gravity = Vector3(0, -40, 0)
initial_velocity_min = 20.0
initial_velocity_max = 30.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_max = 2.0
scale_curve = SubResource("CurveTexture_3376c")
color = Color(0.545098, 0.545098, 0.545098, 0.52549)

[node name="player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_uppic")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.95, 0.95)
sprite_frames = ExtResource("2_wr3fr")
animation = &"dash"
frame = 5
frame_progress = 0.891795

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_l4650")

[node name="Timer_JumpCD" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="Timer_Invul" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Timer_Coffee" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Timer_UnliAmmo" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Timer_DashCD" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="Timer_EnergyStartCD" type="Timer" parent="."]
one_shot = true

[node name="Timer_EnergyRegenCD" type="Timer" parent="."]
wait_time = 0.1

[node name="Timer_IsFiring" type="Timer" parent="."]
wait_time = 0.12
one_shot = true

[node name="Timer_FireRateCD" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Timer_Reload" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Timer_Respawn" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="Left_DoubleTap" type="Timer" parent="."]
wait_time = 0.2

[node name="Right_DoubleTap" type="Timer" parent="."]
wait_time = 0.2

[node name="GPUParticles2D_Jump" type="GPUParticles2D" parent="."]
position = Vector2(0, 14)
emitting = false
amount = 50
process_material = SubResource("ParticleProcessMaterial_10tpu")
lifetime = 0.45
one_shot = true

[node name="Node2D_Aim" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="Node2D_Aim"]
position = Vector2(7, 0)

[node name="State Machine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_73eq6")
initial_state = NodePath("PlayerOnGround")

[node name="PlayerOnGround" type="Node" parent="State Machine"]
script = ExtResource("4_53up4")

[node name="PlayerInAir" type="Node" parent="State Machine"]
script = ExtResource("5_enbi2")

[node name="PlayerFire" type="Node" parent="State Machine"]
script = ExtResource("6_er8oo")

[node name="PlayerDead" type="Node" parent="State Machine"]
script = ExtResource("7_haxam")

[node name="PlayerDash" type="Node" parent="State Machine"]
script = ExtResource("8_pi7k4")

[connection signal="timeout" from="Timer_Invul" to="." method="_on_timer_invul_timeout"]
[connection signal="timeout" from="Timer_Coffee" to="." method="_on_timer_invul_timeout"]
[connection signal="timeout" from="Timer_Coffee" to="." method="_on_timer_coffee_timeout"]
[connection signal="timeout" from="Timer_UnliAmmo" to="." method="_on_timer_unli_ammo_timeout"]
[connection signal="timeout" from="Timer_DashCD" to="." method="_on_timer_dash_cd_timeout"]
[connection signal="timeout" from="Timer_EnergyStartCD" to="." method="_on_timer_energy_start_cd_timeout"]
[connection signal="timeout" from="Timer_EnergyRegenCD" to="." method="_on_timer_energy_regen_cd_timeout"]
[connection signal="timeout" from="Timer_IsFiring" to="." method="_on_timer_is_firing_timeout"]
[connection signal="timeout" from="Timer_Reload" to="." method="_on_timer_reload_timeout"]
[connection signal="timeout" from="Timer_Respawn" to="." method="_on_timer_respawn_timeout"]
[connection signal="timeout" from="Left_DoubleTap" to="." method="_on_left_double_tap_timeout"]
[connection signal="timeout" from="Right_DoubleTap" to="." method="_on_right_double_tap_timeout"]
